@@ -263,7 +263,8 @@ public class BpmnParse extends Parse {
   public static final String PROPERTYNAME_IS_MULTI_INSTANCE = "isMultiInstance";
 
   public static final Namespace CAMUNDA_BPMN_EXTENSIONS_NS = new Namespace(BpmnParser.CAMUNDA_BPMN_EXTENSIONS_NS, BpmnParser.ACTIVITI_BPMN_EXTENSIONS_NS);
-  public static final Namespace FLUXNOVA_BPMN_EXTENSIONS_NS = new Namespace(BpmnParser.FLUXNOVA_BPMN_EXTENSIONS_NS);
+  // Fluxnova extensions namespace, falling back to the legacy Camunda namespace for backwards compatibility
+  public static final Namespace FLUXNOVA_BPMN_EXTENSIONS_NS = new Namespace(BpmnParser.FLUXNOVA_BPMN_EXTENSIONS_NS, BpmnParser.CAMUNDA_BPMN_EXTENSIONS_NS);
   public static final Namespace XSI_NS = new Namespace(BpmnParser.XSI_NS);
   public static final Namespace BPMN_DI_NS = new Namespace(BpmnParser.BPMN_DI_NS);
   public static final Namespace OMG_DI_NS = new Namespace(BpmnParser.OMG_DI_NS);
@@ -443,7 +444,7 @@ public class BpmnParse extends Parse {
         Class<?> wsdlImporterClass;
         try {
           wsdlImporterClass = Class.forName("org.camunda.bpm.engine.impl.webservice.CxfWSDLImporter", true, Thread.currentThread().getContextClassLoader());
-          XMLImporter newInstance = (XMLImporter) wsdlImporterClass.newInstance();
+          XMLImporter newInstance = (XMLImporter) wsdlImporterClass.getDeclaredConstructor().newInstance();
           this.importers.put(importType, newInstance);
           return newInstance;
         } catch (Exception e) {
@@ -754,8 +755,8 @@ public class BpmnParse extends Parse {
       callback.callback();
     }
 
-    if (parentScope instanceof ProcessDefinition) {
-      parseProcessDefinitionCustomExtensions(scopeElement, (ProcessDefinition) parentScope);
+    if (parentScope instanceof ProcessDefinition definition) {
+      parseProcessDefinitionCustomExtensions(scopeElement, definition);
     }
   }
 
@@ -976,9 +977,9 @@ public class BpmnParse extends Parse {
         addError(parentElement.getTagName() + " must define a startEvent element", parentElement);
       }
     }
-    if (scope instanceof ProcessDefinitionEntity) {
-      selectInitial(startEventActivities, (ProcessDefinitionEntity) scope, parentElement);
-      parseStartFormHandlers(startEventElements, (ProcessDefinitionEntity) scope);
+    if (scope instanceof ProcessDefinitionEntity entity) {
+      selectInitial(startEventActivities, entity, parentElement);
+      parseStartFormHandlers(startEventElements, entity);
     }
 
     // invoke parse listeners
@@ -1792,8 +1793,8 @@ public class BpmnParse extends Parse {
     // find all cancel end events
     for (ActivityImpl childActivity : transaction.getActivities()) {
       ActivityBehavior activityBehavior = childActivity.getActivityBehavior();
-      if (activityBehavior != null && activityBehavior instanceof CancelEndEventActivityBehavior) {
-        ((CancelEndEventActivityBehavior) activityBehavior).setCancelBoundaryEvent(activity);
+      if (activityBehavior != null && activityBehavior instanceof CancelEndEventActivityBehavior behavior) {
+        behavior.setCancelBoundaryEvent(activity);
       }
     }
 
@@ -3402,6 +3403,17 @@ public class BpmnParse extends Parse {
     }
   }
 
+  protected ActivityImpl getAdHocSubProcessScope(ActivityImpl activity) {
+    ScopeImpl flowScope = activity.getFlowScope();
+    if (flowScope instanceof ActivityImpl) {
+      ActivityImpl flowScopeActivity = (ActivityImpl) flowScope;
+      if (ActivityTypes.SUB_PROCESS_AD_HOC.equals(flowScopeActivity.getProperty(BpmnProperties.TYPE.getName()))) {
+        return flowScopeActivity;
+      }
+    }
+    return null;
+  }
+
   /**
    * Parses a boundary timer event. The end-result will be that the given nested
    * activity will get the appropriate {@link ActivityBehavior}.
@@ -4250,8 +4262,7 @@ public class BpmnParse extends Parse {
       }
       parameter.setTarget(target);
 
-      String restricted = parameterElement.attribute("restricted");
-      if (restricted != null && Boolean.parseBoolean(restricted.trim())) {
+      if (BpmnParseUtil.isRestricted(parameterElement)) {
         parameter.setRestricted(true);
       }
     }
@@ -4878,17 +4889,21 @@ public class BpmnParse extends Parse {
 
           activity.setIoMapping(inputOutput);
 
-          if (getMultiInstanceScope(activity) == null) {
+          if (getMultiInstanceScope(activity) == null && getAdHocSubProcessScope(activity) == null) {
             // turn activity into a scope (->local, isolated scope for
-            // variables) unless it is a multi instance activity, in that case
-            // this
-            // is not necessary because:
+            // variables) unless it is a multi instance activity or a direct
+            // child of an ad hoc subprocess, in that case this is not necessary
+            // because:
             // A scope is already created for the multi instance body which
             // isolates the local variables from other executions in the same
             // scope, and
             // * parallel: the individual concurrent executions are isolated
             // even if they are not scope themselves
             // * sequential: after each iteration local variables are purged
+            // For an ad hoc subprocess the subprocess scope execution provides
+            // variable isolation, and output-parameter values written by child
+            // tasks must propagate to the subprocess scope (e.g. to satisfy a
+            // completionCondition).
             activity.setScope(true);
           }
         }
@@ -4950,8 +4965,8 @@ public class BpmnParse extends Parse {
     if (value == null) {
       return new NullValueProvider();
 
-    } else if (value instanceof String) {
-      Expression expression = expressionManager.createExpression((String) value);
+    } else if (value instanceof String string) {
+      Expression expression = expressionManager.createExpression(string);
       return new ElValueProvider(expression);
 
     } else {
